# rust-cli-fist

./: Cargo.toml  index.html  test.decode  test.rest
fixtures/: b64.txt  blake3.txt
src/: lib.rs  main.rs
src/cli/: base64.rs  csv_cli.rs  genpass_cli.rs  http_cli.rs  jwt_cli.rs  mod.rs  text.rs
src/process/: base64_code.rs  csv_conver.rs  gen_pass.rs  http_serve.rs  jwt_auth.rs  mod.rs  text.rs
src/utils/: mod.rs  utils.rs
